# TensorflowModelSplitter

./: Makefile  README.md  pyproject.toml
tensorflowmodelsplitter/: __main__.py  main.py
tensorflowmodelsplitter/extractor/: functional_api.py  subclassing_api.py  subclassing_api_with_original_layer.py
tensorflowmodelsplitter/model_architecture_kinds/: functional_api.py  subclassing_api.py  subclassing_api_with_original_layer.py
tensorflowmodelsplitter/utils/: seeds.py
