[tool.poetry]
name = "tensorflowmodelsplitter"
version = "0.1.0"
description = ""
authors = ["Collonville <ht235711@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "3.8.10"
tensorflow = "2.4.3"
pydot = "^1.4.2"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "20.8b1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
